--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 												}
 											}, true);
 			}
+			console.log("====================================");
 			createResultsDiv("Related", relatedStream(img), false);
 		}
 		
